set lock-screen wallpaper.

--- a/entry/src/main/module.json5
+++ b/entry/src/main/module.json5
@@ -60,6 +60,16 @@
           ],
           "when": "inuse"
         }
+      },
+      {
+        "name": "ohos.permission.SET_WALLPAPER",
+        "reason": "$string:set_wallpaper_permission_reason",
+        "usedScene": {
+          "abilities": [
+            "EntryAbility"
+          ],
+          "when": "inuse"
+        }
       }
     ],
     "abilities": [
